# gazebo_prototype

./: .travis.yml  LICENSE  README.md
exc_control/: .setup_assistant  CMakeLists.txt  package.xml
exc_control/config/: controllers.yaml  exc_control.yaml  excavator.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  laser_filter.yaml  ompl_planning.yaml
exc_control/launch/: default_warehouse_db.launch  demo.launch  excavator_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  hw.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
exc_control/navigation_params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
exc_control/src/: ArduinoInterface.cpp  ControllerLauncher.cpp  DiffDrive.cpp  Drivebase.cpp  DrivebaseController.cpp  DriverStation.cpp  HardwareInterface.cpp  PointTargeter.cpp  TestMain.cpp  TestMoveIt.cpp
exc_description/: CMakeLists.txt  package.xml
exc_description/launch/: exc.rviz  exc_rviz.launch
exc_description/urdf/: exc.gazebo  exc.xacro
exc_gazebo/: CMakeLists.txt  package.xml
exc_gazebo/launch/: exc_world.launch  exc_world_headless.launch  main.launch  stereo.launch
localization_prototype/: package.xml
localization_prototype/launch/: light.launch  master.launch
localization_prototype/params/: ekf_template.yaml
tfr_control/: CMakeLists.txt  package.xml
tfr_control/cmake_modules/: FindSFML.cmake
tfr_description/: CMakeLists.txt  package.xml
tfr_description/launch/: exc.rviz  exc_rviz.launch  rviz_shortcut.launch
tfr_description/urdf/: drivebase.xacro  drivebase_controller.xacro  excavator.xacro  model.xacro  sensors.xacro
tfr_gazebo/: CMakeLists.txt  package.xml
tfr_gazebo/launch/: controller.launch  main.launch  stereo.launch  tfr_world.launch
