<?xml version="1.0"?>
<package>
  <name>exc_description</name>
  <version>0.1.0</version>
  <description>The Excavator description (model) package</description>

  <maintainer email="adam.krpan@outlook.com">Adam Krpan</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/TrickfireRobotics/gazebo_prototype</url>

  <author email="adam.krpan@outlook.com">Adam Krpan</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <export>
  </export>
</package>
